--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "firebase": "7.18.0",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "eslint": "7",
